Implemented half working chromium Fixed color desaturation issues(sRGBLinear)